<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="wrap_content"
    android:paddingBottom="20dp"
    android:layout_width="match_parent">


    <androidx.cardview.widget.CardView
        android:id="@+id/card_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:padding="20dp"
        card_view:cardBackgroundColor="@color/veryLightGrey"
        card_view:cardCornerRadius="6dp"
        card_view:cardElevation="10dp"
        card_view:contentPadding="4dp"
        card_view:layout_constraintEnd_toEndOf="parent"
        card_view:layout_constraintStart_toStartOf="parent"
        card_view:layout_constraintTop_toTopOf="parent"
        >


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/deleteImage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="5dp"
                android:paddingRight="8dp"
                card_view:layout_constraintBottom_toTopOf="@+id/relativeLayout"
                card_view:layout_constraintEnd_toEndOf="parent"
                card_view:layout_constraintTop_toTopOf="parent"
                card_view:srcCompat="@drawable/ic_baseline_cancel_24" />

            <RelativeLayout
                android:id="@+id/relativeLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                card_view:layout_constraintStart_toStartOf="parent"
                card_view:layout_constraintTop_toBottomOf="@+id/deleteImage">


                <TextView
                    android:id="@+id/titleSugerencia"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:shadowColor="@color/darkGrey"
                    android:shadowDx="3"
                    android:shadowDy="5"
                    android:shadowRadius="7"
                    android:text="@string/sugerencia"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textSize="17sp"
                    android:textStyle="bold"></TextView>


                <TextView
                    android:id="@+id/ingredientsTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/titleSugerencia"
                    android:text="@string/ingredientes"
                    android:layout_marginTop="20dp"
                    android:textColor="@color/darkGrey"
                    android:textSize="14sp"
                    android:textStyle="bold" />
                <TextView
                    android:id="@+id/userName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/ingredientsTextView"
                    android:text="@string/user"
                    android:layout_marginTop="6dp"
                    android:textColor="@color/darkGrey"
                    android:textSize="14sp"
                    android:textStyle="bold" />
                <TextView
                    android:id="@+id/dateSugerencia"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/userName"
                    android:text="@string/fechaSugerencia"
                    android:layout_marginTop="6dp"
                    android:textColor="@color/darkGrey"
                    android:textSize="14sp"
                    android:textStyle="bold" />
            </RelativeLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>
