<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUp">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingBottom="30dp">

            <TextView
                android:id="@+id/pizzeria"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:background="@color/veryLightGrey"
                android:gravity="center"
                android:padding="20dp"
                android:shadowColor="@color/darkGrey"
                android:shadowDx="12"
                android:shadowDy="0"
                android:shadowRadius="1"
                android:text="@string/pizzeria"
                android:textColor="@color/red"
                android:textSize="60sp"
                android:textStyle="bold" />

            <androidx.cardview.widget.CardView
                android:id="@+id/cardView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="40dp"
                app:cardCornerRadius="12dp"
                app:cardElevation="10dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="20dp"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text ="@string/nameForm"
                        android:textSize="20sp"
                        android:textStyle="bold"
                        android:textColor="@color/darkGrey"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/pizzeria" />

                    <EditText
                        android:id="@+id/nameEditText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:ems="10"
                        android:gravity="center"
                        android:hint="@string/nameForm"
                        android:textColorHint="@color/normalGrey"
                        android:importantForAutofill="no"
                        android:inputType="textPersonName"
                        android:minHeight="48dp"
                        android:textSize="18sp"
                        android:textColor="@color/lessDarkGrey"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/name" />

                    <TextView
                        android:id="@+id/email"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:text="@string/email"
                        android:textSize="20sp"
                        android:textStyle="bold"
                        android:textColor="@color/darkGrey"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/nameEditText" />

                    <EditText
                        android:id="@+id/emailEditText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:autofillHints=""
                        android:ems="10"
                        android:gravity="center"
                        android:hint="@string/email"
                        android:inputType="textEmailAddress"
                        android:minHeight="48dp"
                        android:textColor="@color/lessDarkGrey"
                        android:textColorHint="#757575"
                        android:textSize="18sp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/email" />

                    <TextView
                        android:id="@+id/password"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="30dp"
                        android:text="@string/password"
                        android:textSize="20sp"
                        android:textColor="@color/darkGrey"
                        android:textStyle="bold"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/emailEditText" />

                    <EditText
                        android:id="@+id/passwordEditText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:ems="10"
                        android:gravity="center"
                        android:textColorHint="@color/normalGrey"
                        android:hint="@string/password"
                        android:inputType="textPassword"
                        android:minHeight="48dp"
                        android:textSize="18sp"
                        android:textColor="@color/lessDarkGrey"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/password"
                        android:autofillHints="" />

                    <TextView
                        android:id="@+id/password2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/passwordRepeat"
                        android:textSize="20sp"
                        android:layout_marginTop="10dp"
                        android:textStyle="bold"
                        android:textColor="@color/darkGrey"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/passwordEditText" />

                    <EditText
                        android:id="@+id/password2EditText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:ems="10"
                        android:gravity="center"
                        android:textColorHint="@color/normalGrey"
                        android:hint="@string/passwordRepeat"
                        android:inputType="text|textPassword"
                        android:minHeight="48dp"
                        android:textSize="18sp"
                        android:textColor="@color/lessDarkGrey"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/password2"
                        android:autofillHints="" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <Button
                android:id="@+id/signupBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:shadowDx="2"
                android:shadowDy="2"
                android:shadowRadius="3"
                android:gravity="center"
                android:text="@string/signUp"
                android:textSize="18sp"
                android:textColor="@color/almostWhite"
                android:textStyle="bold" />

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>